# aula_python_web_scraping

./: const.py  main.py
aula_python_rpa/: pyproject.toml
aula_python_rpa/aula_python_rpa/: const.py  main.py
aula_python_rpa/aula_python_rpa/web_scraping/: webscraping_bovespa.py  webscraping_coinmarketcap.py
mail_config/: mail.py
web_scraping/: webscraping_bovespa.py  webscraping_coinmarketcap.py
