[tool.poetry]
name = "aula-python-rpa"
version = "0.1.0"
description = ""
authors = ["Samuel Perroni <samuel_perroni@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
selenium = "^4.23.1"
webdriver-manager = "^4.0.2"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
